--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>bookshelf</title>
+    <link rel="stylesheet" href="/vendor/font-awesome-4.6.3/css/font-awesome.min.css">
   </head>
   <body>
     <div class="bookshelf-app" id="root"></div>
